added links to the footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Vanilla Weather</title>
 </head>
 <body>
-    
+    <footer>
+        coded by 
+        <a href="" target="_blank">Youstina Ibrahim</a>, code hosted on 
+        <a href="https://github.com/Youstina-Ibrahim/Vanilla-weather" target="_blank">Github</a> and website hosted on 
+        <a href="https://stirring-kangaroo-71324b.netlify.app" target="_blank">Netlify</a>
+    </footer>
 </body>
 </html>
