--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>Vanilla Weather</title>
 </head>
 <body>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city.." required>
+            <input type="submit" value="Search">
+        </form>
+
+    </header>
+    <main>
+     <div>
+        <h1>Paris</h1>
+        <p>Tuesday 14:49, scattered clouds
+            <br> Humidity: 66%, Wind:3.13km/h
+        </p>
+     </div>
+     <div>
+        🌥️12°C
+     </div>
+        
+
+    </main>
     <footer>
         coded by 
         <a href="" target="_blank">Youstina Ibrahim</a>, code hosted on 
