--- a/index.html
+++ b/index.html
@@ -1,36 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vanilla Weather</title>
-</head>
-<body>
-    <header>
-        <form>
-            <input type="search" placeholder="Enter a city.." required>
-            <input type="submit" value="Search">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>vanilla weather</title>
+  </head>
+  <body>
+    <div class="weather-app">
+      <header>
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
+      </header>
+      <main>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Paris</h1>
+            <p class="weather-app-details">
+              Tuesday 14:49, scattered clouds
+              <br />
+              Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature-container">
+            <div class="weather-app-icon">🌤️</div>
+            <div class="weather-app-temperature">12</div>
+            <div class="weather-app-unit">°C</div>
+          </div>
+        </div>
+      </main>
 
-    </header>
-    <main>
-     <div>
-        <h1>Paris</h1>
-        <p>Tuesday 14:49, scattered clouds
-            <br> Humidity: 66%, Wind:3.13km/h
-        </p>
-     </div>
-     <div>
-        🌥️12°C
-     </div>
-        
-
-    </main>
-    <footer>
-        coded by 
-        <a href="" target="_blank">Youstina Ibrahim</a>, code hosted on 
-        <a href="https://github.com/Youstina-Ibrahim/Vanilla-weather" target="_blank">Github</a> and website hosted on 
-        <a href="https://stirring-kangaroo-71324b.netlify.app" target="_blank">Netlify</a>
-    </footer>
-</body>
+      <footer>
+        This project was coded by
+        <a href="" target="_blank">Youstina Ibrahim</a>,
+        is
+        <a href="https://github.com/Youstina-Ibrahim/Vanilla-weather" target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and
+        <a href="https://stirring-kangaroo-71324b.netlify.app" target="_blank"
+          >hosted on Netlify</a
+        >
+      </footer>
+    </div>
+  </body>
 </html>
