--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>vanilla weather</title>
   </head>
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="submit-form">
           <input
             type="search"
             placeholder="Enter a city.."
             required
             class="search-form-input"
+            id="city-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
         </form>
@@ -28,16 +30,17 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Paris</h1>
+            <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Tuesday 14:49, scattered clouds
-              <br />
-              Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
-            </p>
+              <span class="current-time">Saturday 15:32, </span>
+            
+           <span class="description"> moderate rain</span> <br />
+           Humidity: <strong class="humidity"></strong> <strong>%</strong>, Wind: <strong class="wind"></strong> <strong>km/h</strong>
+          </p>
           </div>
           <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">🌤️</div>
-            <div class="weather-app-temperature">12</div>
+            <div id="icon"></div>
+            <div class="weather-app-temperature" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
@@ -56,5 +59,6 @@
         >
       </footer>
     </div>
+   <script src="index.js"></script>
   </body>
 </html>
